[metadata]
name = narest
version = 1.0.0
author = Guilhem Lepoultier
author_email = guilhem@sivienn.com
description = NaN repartition study for time series
classifiers =
    Programming Language :: Python :: 3
    License :: copyright
    Operating System :: OS Independent

[options]
python_requires = >=3.8